# olmo-data

./: .gitignore  README.md  all_paths.yaml  config.yaml  config_tema.yaml  dima_config.yaml  math_config.yaml  nikita_config.yaml  pyproject.toml  run.sh  test.sh  test_config.yaml
configs/: config_grouped.yaml  dima_config.yaml  nikita_config.yaml  tema_config.yaml  test_config.yaml
processed_data/: processing_progress.json
scripts/: compare_hashes.py  group_paths.py  hash_file.sh  upload_to_hf.py
src/: data_processor.py  data_reconstructor.py  utils.py
